--- a/Lab_7/Lab_7.ipynb
+++ b/Lab_7/Lab_7.ipynb
@@ -906,7 +906,7 @@
     }
    ],
    "source": [
-    "years = 127.7*10e3 - 95.5*10e3\n",
+    "years = (127.7*10e3) - (95.5*10e3)\n",
     "print(f\"Years: {years}\")\n",
     "net_change_elev = 1000*(-14 - 50)  # mm, total elevation change over period of interest\n",
     "print(f\"Net change in lake level: {net_change_elev} mm\")\n",
