--- a/Lab_7/Lab_7.ipynb
+++ b/Lab_7/Lab_7.ipynb
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "b2818aa5-36b4-477b-82dd-bf688de8c1ee",
    "metadata": {},
    "outputs": [
@@ -896,17 +896,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Years: 322000.0\n",
+      "Years: 32200\n",
       "Net change in lake level: -64000 mm\n",
       "Assuming constant precipitation of 3in/yr: 7.62 mm\n",
-      "Average annual change in lake elevation: -0.19875776397515527 mm\n",
-      "Average annual evaporation: 7.818757763975156 mm\n",
-      "Average daily evaporation: 0.021406592098494607 mm\n"
+      "Average annual change in lake elevation: -1.9875776397515528 mm\n",
+      "Average annual evaporation: 9.607577639751552 mm\n",
+      "Average daily evaporation: 0.026304114003426565 mm\n"
      ]
     }
    ],
    "source": [
-    "years = (127.7*10e3) - (95.5*10e3)\n",
+    "years = (127700) - (95500)\n",
     "print(f\"Years: {years}\")\n",
     "net_change_elev = 1000*(-14 - 50)  # mm, total elevation change over period of interest\n",
     "print(f\"Net change in lake level: {net_change_elev} mm\")\n",
