--- a/Lab_7/Lab_7.ipynb
+++ b/Lab_7/Lab_7.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "3f3cd889-0e3e-4394-b238-b03dede2d6be",
    "metadata": {
     "tags": []
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "652ce805-7f6c-482d-80ac-4acf06ddc3af",
    "metadata": {
     "tags": []
@@ -1310,10 +1310,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1c78cb71-c1c3-4f85-a288-c06120d2c907",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average evaporation rate (mm/day): 6.052466320628443\n",
+      "Total evaporation over 166 days (mm): 1004.7094092243215\n",
+      "Rain since Oct 1 (mm): 457.2\n",
+      "Net precipitation (mm, negative means net evaporation): -547.5094092243214\n"
+     ]
+    }
+   ],
    "source": [
     "days_into_water_yr = 166\n",
     "\n",
@@ -1350,10 +1361,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b2818aa5-36b4-477b-82dd-bf688de8c1ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Years: 32200\n",
+      "Net change in lake level: -64000 mm\n",
+      "Assuming constant precipitation of 3in/yr: 7.62 mm\n",
+      "Average annual change in lake elevation: -1.9875776397515528 mm\n",
+      "Average annual evaporation: 9.607577639751552 mm\n",
+      "Average daily evaporation: 0.026304114003426565 mm\n"
+     ]
+    }
+   ],
    "source": [
     "years = (127700) - (95500)\n",
     "print(f\"Years: {years}\")\n",
